--- a/RenewableEnergyFarmer.html
+++ b/RenewableEnergyFarmer.html
@@ -19,8 +19,9 @@
 
     <body>
         <!--Top spacing container-->
-        <div class="topspacing">
+        <!--<div class="topspacing">
         </div>
+        -->
 
         <!--NavBar container-->
         <!--
@@ -78,7 +79,7 @@
                   <!-- <div id="unity-webgl-logo"></div> -->
                   <!-- <div id="unity-fullscreen-button"></div> -->
                   <p class="fullscreenbutton" id="unity-fullscreen-button" onclick="unityInstance.SetFullscreen(1)"> Go fullscreen </p>
-                  <!-- <div id="unity-build-title">CUBE BALL -  ©FuriousPandaGames 2021</div> -->
+                  <!-- <div id="unity-build-title">CUBE BALL -  ©FuriousPandaGames 2022</div> -->
                 </div>
               </div>
               <script>
@@ -113,12 +114,12 @@
                   updateBannerVisibility();
                 }
 
-                var buildUrl = "Build";
-             var loaderUrl = buildUrl + "/REF 3.loader.js";
-            var config = {
-            dataUrl: buildUrl + "/REF 3.data",
-        frameworkUrl: buildUrl + "/REF 3.framework.js",
-        codeUrl: buildUrl + "/REF 3.wasm",
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/REF 4.loader.js";
+      var config = {
+        dataUrl: buildUrl + "/REF 4.data",
+        frameworkUrl: buildUrl + "/REF 4.framework.js",
+        codeUrl: buildUrl + "/REF 4.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Renewable Energy Farmer",
@@ -213,38 +214,38 @@
             <!--Images (full-width) with the number and caption text-->
             <div class="mySlides fade">
                 <div class="numbertext">1 / 6</div>
-                <img src="cubeball1.jpg" style="width:100%">
-                <div class="text">Main screen</div>
+                <img src="unknown.png" style="width:100%">
+                <div class="text">You will start the game with level 1 solar panel units.</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 6</div>
-                <img src="cubeball2.jpg" style="width:100%">
-                <div class="text">About the game</div>
+                <img src="unknown2.png" style="width:100%">
+                <div class="text">Here you can buy more units and exchange the stored energy for money.</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 6</div>
-                <img src="cubeball3.jpg" style="width:100%">
-                <div class="text">In-game (1)</div>
+                <img src="unknown3.png" style="width:100%">
+                <div class="text">The game cycles between day and nigh. Production speed is dynamically affected by time.</div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="mySlides fade">s
                 <div class="numbertext">4 / 6</div>
-                <img src="cubeball4.jpg" style="width:100%">
-                <div class="text">Settings menu</div>
+                <img src="unknown4.png" style="width:100%">
+                <div class="text">The nuclear power reactor will be closed when you'll unlock all the renewable energy sources.</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">5 / 6</div>
-                <img src="cubeball5.jpg" style="width:100%">
-                <div class="text">In-game (2)</div>
+                <img src="unknown3.png" style="width:100%">
+                <div class="text">Each day will start with a randomized weather. Your units react to the weather, by producing more / less energy.</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">6 / 6</div>
-                <img src="cubeball6.jpg" style="width:100%">
-                <div class="text">In-game (3)</div>
+                <img src="unknown3.png" style="width:100%">
+                <div class="text">This is how a fully renewable energy based city should look like! (End of the game)</div>
             </div>
 
             <!--Next and previous buttons for changing the image to be displayed-->
