--- a/RenewableEnergyFarmer.html
+++ b/RenewableEnergyFarmer.html
@@ -67,36 +67,36 @@
             <div class="mySlides fade">
                 <div class="numbertext">1 / 6</div>
                 <img src="unknown.png" style="width:100%">
-                <div class="text">You will start the game with level 1 solar panel units.</div>
+                <div class="text">You will start the game with level 1 solar panel unit.</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 6</div>
-                <img src="unknown2.png" style="width:100%">
+                <img src="unknown10.png" style="width:100%">
                 <div class="text">Here you can buy more units and exchange the stored energy for money.</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 6</div>
-                <img src="unknown3.png" style="width:100%">
+                <img src="unknown7.png" style="width:100%">
                 <div class="text">The game cycles between day and nigh. Production speed is dynamically affected by time.</div>
             </div>
 
             <div class="mySlides fade">s
                 <div class="numbertext">4 / 6</div>
-                <img src="unknown4.png" style="width:100%">
+                <img src="unknown5.png" style="width:100%">
                 <div class="text">The nuclear power reactor will be closed when you'll unlock all the renewable energy sources.</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">5 / 6</div>
-                <img src="unknown3.png" style="width:100%">
+                <img src="unknown6.png" style="width:100%">
                 <div class="text">Each day will start with a randomized weather. Your units react to the weather, by producing more / less energy.</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">6 / 6</div>
-                <img src="unknown3.png" style="width:100%">
+                <img src="unknown8.png" style="width:100%">
                 <div class="text">This is how a fully renewable energy based city should look like! (End of the game)</div>
             </div>
 
