--- a/RenewableEnergyFarmer.html
+++ b/RenewableEnergyFarmer.html
@@ -82,7 +82,7 @@
                 <div class="text">The game cycles between day and nigh. Production speed is dynamically affected by time.</div>
             </div>
 
-            <div class="mySlides fade">s
+            <div class="mySlides fade">
                 <div class="numbertext">4 / 6</div>
                 <img src="unknown5.png" style="width:100%">
                 <div class="text">The nuclear power reactor will be closed when you'll unlock all the renewable energy sources.</div>
