--- a/RenewableEnergyFarmer.html
+++ b/RenewableEnergyFarmer.html
@@ -67,7 +67,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">1 / 6</div>
                 <img src="unknown.png" style="width:100%">
-                <div class="text">You will start the game with level 1 solar panel unit.</div>
+                <div class="text">You will start the game with a level 1 solar panel unit.</div>
             </div>
 
             <div class="mySlides fade">
@@ -79,7 +79,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">3 / 6</div>
                 <img src="unknown7.png" style="width:100%">
-                <div class="text">The game cycles between day and nigh. Production speed is dynamically affected by time.</div>
+                <div class="text">The game cycles between day and night. Production speed is dynamically affected by time.</div>
             </div>
 
             <div class="mySlides fade">
