--- a/RenewableEnergyFarmer.html
+++ b/RenewableEnergyFarmer.html
@@ -135,24 +135,7 @@
                 </ul>
                 <br/>
                 <hr style="width:100%; border-width:0; height:2px; color:#868686; background-color:#868686; box-shadow: 0px 2px 2px black;"/>
-                <p>FuriousPandaGames 2022</p>
-                <p>Get in touch with us:</p>
-                <div class="social">
-                    <a href="mailto:fpgdevs@gmail.com" target="_blank">
-                        <img src="gmail-logo.png" alt="Gmail contact (logo)">
-                    </a>
-                </div>
-                <div class="social">
-                    <a href="https://discord.gg/TwvAP8P" target="_blank">
-                        <img src="discord.png" alt="Discord contact (logo)">
-                    </a>
-                </div>
-                <div class="social">
-                    <a href="https://play.google.com/store/apps/developer?id=FuriousPandaGames&hl=en_US&gl=US" target="_blank">
-                        <img src="play-store-logo.png" alt="PlayStore page (logo)">
-                    </a>
-                </div>
-            </div>
+                <p>Renewable Energy Farmer - A game created by Dincă Andrei and Mihalache Luca Ștefan</p>
         </footer>
     </body>
 
